--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -34,7 +34,7 @@
     "from citipy import citipy\n",
     "\n",
     "# Output File (CSV)\n",
-    "output_data_file = \"output_data/cities.csv\"\n",
+    "output_data_file = \"../output_data/cities.csv\"\n",
     "\n",
     "# Range of latitudes and longitudes\n",
     "lat_range = (-90, 90)\n",
@@ -1838,9 +1838,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "mypydev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mypydev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1852,7 +1852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
