--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Min Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>hobart</td>\n",
+       "      <td>-42.88</td>\n",
+       "      <td>147.33</td>\n",
+       "      <td>64.99</td>\n",
+       "      <td>60.80</td>\n",
+       "      <td>72</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1609711992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>qaanaaq</td>\n",
+       "      <td>77.48</td>\n",
+       "      <td>-69.36</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>2.01</td>\n",
+       "      <td>83</td>\n",
+       "      <td>82</td>\n",
+       "      <td>3.53</td>\n",
+       "      <td>GL</td>\n",
+       "      <td>1609712078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>lavrentiya</td>\n",
+       "      <td>65.58</td>\n",
+       "      <td>-171.00</td>\n",
+       "      <td>-6.02</td>\n",
+       "      <td>-6.02</td>\n",
+       "      <td>90</td>\n",
+       "      <td>85</td>\n",
+       "      <td>15.14</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1609712079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>tiksi</td>\n",
+       "      <td>71.69</td>\n",
+       "      <td>128.87</td>\n",
+       "      <td>-23.73</td>\n",
+       "      <td>-23.73</td>\n",
+       "      <td>84</td>\n",
+       "      <td>43</td>\n",
+       "      <td>3.38</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1609712080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>wattegama</td>\n",
+       "      <td>6.80</td>\n",
+       "      <td>81.48</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>100</td>\n",
+       "      <td>75</td>\n",
+       "      <td>5.82</td>\n",
+       "      <td>LK</td>\n",
+       "      <td>1609712082</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0        City    Lat     Lng  Max Temp  Min Temp  Humidity  \\\n",
+       "0           0      hobart -42.88  147.33     64.99     60.80        72   \n",
+       "1           1     qaanaaq  77.48  -69.36      2.01      2.01        83   \n",
+       "2           2  lavrentiya  65.58 -171.00     -6.02     -6.02        90   \n",
+       "3           3       tiksi  71.69  128.87    -23.73    -23.73        84   \n",
+       "4           4   wattegama   6.80   81.48     75.20     75.20       100   \n",
+       "\n",
+       "   Cloudiness  Wind Speed Country        Date  \n",
+       "0          75        1.12      AU  1609711992  \n",
+       "1          82        3.53      GL  1609712078  \n",
+       "2          85       15.14      RU  1609712079  \n",
+       "3          43        3.38      RU  1609712080  \n",
+       "4          75        5.82      LK  1609712082  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "city_data = pd.read_csv(\"..\\WeatherPy\\Output\\City_Data_Output.csv\")\n",
+    "city_data.head()"
    ]
   },
   {
@@ -60,10 +191,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d55211e64b704fb38cf449310fb10c6c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "gmaps.configure(api_key=g_key)\n",
+    "locations = city_data[[\"Lat\",\"Lng\"]]\n",
+    "humidity = city_data[\"Humidity\"].astype(float)\n",
+    "\n",
+    "fig = gmaps.figure()\n",
+    "\n",
+    "#heat_layer = gmaps.heatmap_layer(locations, weights=humidity,dissipating=False,max_intensity=100,point_radius=1)\n",
+    "\n",
+    "#fig.add_layer(heat_layer)\n",
+    "fig\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -159,9 +316,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pydev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
