--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4          75        5.82      LK  1609712082  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,13 +191,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d55211e64b704fb38cf449310fb10c6c",
+       "model_id": "ea237eec1cc9402f85b2da430f711f98",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,14 +211,14 @@
    ],
    "source": [
     "gmaps.configure(api_key=g_key)\n",
-    "locations = city_data[[\"Lat\",\"Lng\"]]\n",
+    "locations = city_data[[\"Lat\",\"Lng\"]].astype(float)\n",
     "humidity = city_data[\"Humidity\"].astype(float)\n",
     "\n",
     "fig = gmaps.figure()\n",
     "\n",
-    "#heat_layer = gmaps.heatmap_layer(locations, weights=humidity,dissipating=False,max_intensity=100,point_radius=1)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=humidity,dissipating=False,max_intensity=100,point_radius=1)\n",
     "\n",
-    "#fig.add_layer(heat_layer)\n",
+    "fig.add_layer(heat_layer)\n",
     "fig\n"
    ]
   },
@@ -240,10 +240,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Min Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>saint-philippe</td>\n",
+       "      <td>-21.36</td>\n",
+       "      <td>55.77</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>63.00</td>\n",
+       "      <td>73</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.05</td>\n",
+       "      <td>RE</td>\n",
+       "      <td>1609712099</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>97</td>\n",
+       "      <td>kolokani</td>\n",
+       "      <td>13.57</td>\n",
+       "      <td>-8.03</td>\n",
+       "      <td>78.73</td>\n",
+       "      <td>78.73</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.96</td>\n",
+       "      <td>ML</td>\n",
+       "      <td>1609712204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>101</td>\n",
+       "      <td>oussouye</td>\n",
+       "      <td>12.48</td>\n",
+       "      <td>-16.55</td>\n",
+       "      <td>75.20</td>\n",
+       "      <td>73.40</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>1609712208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>169</td>\n",
+       "      <td>yuli</td>\n",
+       "      <td>9.70</td>\n",
+       "      <td>10.27</td>\n",
+       "      <td>79.00</td>\n",
+       "      <td>79.00</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>NG</td>\n",
+       "      <td>1609712293</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>185</td>\n",
+       "      <td>lazaro cardenas</td>\n",
+       "      <td>17.96</td>\n",
+       "      <td>-102.20</td>\n",
+       "      <td>82.85</td>\n",
+       "      <td>82.85</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.82</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>1609712313</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0             City    Lat     Lng  Max Temp  Min Temp  Humidity  \\\n",
+       "18           18   saint-philippe -21.36   55.77     75.20     63.00        73   \n",
+       "97           97         kolokani  13.57   -8.03     78.73     78.73        22   \n",
+       "101         101         oussouye  12.48  -16.55     75.20     73.40        88   \n",
+       "169         169             yuli   9.70   10.27     79.00     79.00        20   \n",
+       "185         185  lazaro cardenas  17.96 -102.20     82.85     82.85        52   \n",
+       "\n",
+       "     Cloudiness  Wind Speed Country        Date  \n",
+       "18            0        8.05      RE  1609712099  \n",
+       "97            0        6.96      ML  1609712204  \n",
+       "101           0        4.70      SN  1609712208  \n",
+       "169           0        4.61      NG  1609712293  \n",
+       "185           0        9.82      MX  1609712313  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vacation_cities = city_data.loc[(city_data[\"Max Temp\"]<85) & (city_data[\"Max Temp\"]>66) & (city_data[\"Wind Speed\"]<10) & (city_data[\"Cloudiness\"]==0)]\n",
+    "vacation_cities.head()\n"
+   ]
   },
   {
    "cell_type": "markdown",
