pushing final updates

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -19,6 +19,20 @@
    },
    "outputs": [],
    "source": [
+    "#Observations\n",
+    "#1. After the analysis of the relationship of a city’s temperature and it’s latitude, \n",
+    "#we can conclude that as a city is closer to the equator (latitude closer to 0) it's max temperature is higher.\n",
+    "\n",
+    "#2. The linear regression between humidity and a city’s latitude reflects that there isn’t a strong relationship \n",
+    "#between humidity and it’s latitude. Initially, one would’ve thought that as you get nearer to the equator humidity \n",
+    "#would be higher, but data differs from that thought.\n",
+    "\n",
+    "#3. According to the data and analysis we can assume that cloudiness increases as we steer away from the equator, \n",
+    "#however the relationship between these two factors  is not very strong, but it exists.\n",
+    "\n",
+    "#4. Finally, there is a weak correlation between wind speed and latitude, but from the data pulled we can conclude \n",
+    "#that wind speeds reduce as we are closer to the equator.\n",
+    "\n",
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
